tests/algorithms/x/PHP/fractals/koch_snowflake.error
run: exit status 255

Fatal error: Cannot redeclare function sin() in /workspace/mochi/tests/algorithms/x/PHP/fractals/koch_snowflake.php on line 29
